# wayfinder

./: .env.example  .gitignore  BUILD_SPEC.md  DEPLOY.md  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
corpus/: chunking.md  embeddings.md  hybrid-search.md  pgvector-operators.md  reranking-recall.md  retrieval-augmented-generation.md  semantic-vector-search.md
docs/: DEMO.md  blog.md
eval/: baseline.json
scripts/: demo_orchestrator.py  demo_trace.py  ingest.py  run_eval.py  run_experiment.py  snapshot_baseline.py
src/langconnect_agent/: __init__.py  agents.py  config.py  env.py  evaluation.py  grading.py  graph.py  llm.py  mcp_server.py  nodes.py  observability.py  orchestrator.py  retrievers.py  router.py  state.py  supervisor.py  trace.py  web.py
tests/: conftest.py  test_baseline.py  test_chat_adapter.py  test_config.py  test_embedder.py  test_env.py  test_evaluation.py  test_fallback.py  test_grader_llm.py  test_graph_smoke.py  test_langconnect_retriever.py  test_llm_ollama.py  test_mcp_server.py  test_observability.py  test_orchestrator.py  test_routing.py  test_trace.py  test_verify.py  test_web.py
